AC_INIT([XCDemo], [1.0])
AM_INIT_AUTOMAKE([foreign subdir-objects])
AC_CONFIG_SRCDIR([configure.ac])
AC_PROG_CXX

PKG_CHECK_MODULES([sdl2], [sdl2])
PKG_CHECK_MODULES([SDL2_image], [SDL2_image])
PKG_CHECK_MODULES([SDL2_mixer], [SDL2_mixer])
PKG_CHECK_MODULES([SDL2_ttf], [SDL2_ttf])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
